--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -29,7 +29,7 @@
                 <div class="button number">2</div>
                 <div class="button number">3</div>
                 <div class="button operator">-</div>
-                <div class="button dot">.</div>
+                <div class="button number dot">.</div>
                 <div class="button number btn-0">0</div>
                 <div class="button operator">/</div>
                 <div class="button operator">X</div>
