Worked on the functionality of buttons

--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -11,9 +11,8 @@
     <section>
         <div class="container">
             <div class="header"><h2 class="title">Calc</h2></div>
-            <div class="display" id="">
-                <div class="display-1 previous-number">0</div>
-                <div class="display-2 current-number">0</div>
+            <div class="display">
+                <div class="display-1 ">0</div>
             </div>
             <div class="calculator">
             <div class="all-buttons">
