worked on Javascript file.

--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -11,27 +11,29 @@
     <section>
         <div class="container">
             <div class="header"><h2 class="title">Calc</h2></div>
-            <div class="display">
-                <div class="display-1 ">0</div>
-            </div>
+                <div class="display-1 " value="" disabled></div>
             <div class="calculator">
             <div class="all-buttons">
                 <div class="button number">7</div>
                 <div class="button number">8</div>
                 <div class="button number">9</div>
                 <div class="button delete">DEL</div>
+
                 <div class="button number">4</div>
                 <div class="button number">5</div>
                 <div class="button number">6</div>
                 <div class="button operator">+</div>
+
                 <div class="button number">1</div>
                 <div class="button number">2</div>
                 <div class="button number">3</div>
                 <div class="button operator">-</div>
+
                 <div class="button number dot">.</div>
                 <div class="button number btn-0">0</div>
                 <div class="button operator">/</div>
                 <div class="button operator">X</div>
+
                 <div class="button reset">RESET</div>
                 <div class="button equals">=</div>
             </div>
